// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User card component Matches snapshot with search 1`] = `
<DocumentFragment>
  <a
    class="group flex  mb-4 last:mb-0 bg-white rounded-l-full rounded-r-full border border-gray-400 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
    href=""
    target="_blank"
  >
    <img
      class="rounded-full h-16 w-16 sm:h-20 sm:w-20 lg:h-24 lg:w-24 transition shadow-sm group-hover:shadow-lg"
      src=""
      title="Anthony"
    />
    <div
      class="flex-1 p-2 sm:p-3 md:p-4 lg:p-5 flex items-center"
    >
      <div
        class="font-bold text-lg sm:text-xl lg:text-2xl"
      >
        <span
          class="text-red-500"
        >
          An
        </span>
        thony
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`User card component Matches snapshot without search 1`] = `
<DocumentFragment>
  <a
    class="group flex  mb-4 last:mb-0 bg-white rounded-l-full rounded-r-full border border-gray-400 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
    href=""
    target="_blank"
  >
    <img
      class="rounded-full h-16 w-16 sm:h-20 sm:w-20 lg:h-24 lg:w-24 transition shadow-sm group-hover:shadow-lg"
      src=""
      title="Anthony"
    />
    <div
      class="flex-1 p-2 sm:p-3 md:p-4 lg:p-5 flex items-center"
    >
      <div
        class="font-bold text-lg sm:text-xl lg:text-2xl"
      >
        Anthony
      </div>
    </div>
  </a>
</DocumentFragment>
`;
